<resources>
    <string name="app_name">GimmeGame</string>

    <string name="title_home">Gimmo</string>
    <string name="title_games">Todos os Jogos</string>
    <string name="title_favorites">Favoritos</string>

    <string name="gimmo">Gimmo</string>

    <string name="title_activity_slash_screan">SlashScrean</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="bem_vindo_default">Bem Vindo!</string>
    <string name="perg_default_1">Pergunta 1 - Número de Jogadores</string>
    <string name="perg_default_2">Pergunta 2 - Faixa Etária</string>
    <string name="perg_default_3">Pergunta 3 - Categorias</string>
    <string name="perg_default_4">Pergunta 4 - Materiais</string>
    <string name="perg_default_5">Pergunta 5 - Detalhes</string>

    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="label_detalhe">Detalhes</string>

    <string name="botao_busca">Recomendar</string>

    <string name="nenhum_resultado">Desculpe, nenhum resultado foi encontrado</string>

    <string-array name="bem_vindo">
        <item>Olá, eu sou o Gimmo, seu assistente de entretenimento! Estou aqui para lhe ajudar a encontrar um jogo que você possa gostar.</item>
        <item>Bem-vindo! Eu sou o Gimmo! Irei lhe ajudar a encontrar um jogo para jogar com seus amigos!</item>
        <item>Olá, sou o Gimmo! Estou aqui para lhe ajudar a encontrar um jogo divertido!</item>
    </string-array>

    <!-- NÚMERO DE JOGADORES -->
    <string-array name="pergunta1">
        <item>Quantas pessoas irão jogar o jogo?</item>
        <item>Qual o número de pessoas participantes?</item>
        <item>Qual o número de jogadores?</item>
    </string-array>

    <!-- FAIXA ETÁRIA -->
    <string-array name="pergunta2">
        <item>Qual a faixa de etária do seu grupo?</item>
        <item>Qual a faixa de idade dos participantes?</item>
        <item>Quais categorias de jogos vocês procuram?</item>
    </string-array>

    <!-- CATEGORIA -->
    <string-array name="pergunta3">
        <item>Em qual categoria vocês estão interessados?</item>
        <item>Que categoria mais lhe interessa?</item>
        <item>Selecione uma das categorias que lhe interessam...</item>
    </string-array>

    <!-- MATERIAIS -->
    <string-array name="pergunta4">
        <item>Qual destes materiais está disponível?</item>
        <item>Qual destes materiais você tem a disposição?</item>
        <item>Selecione o objeto que você dispõe...</item>
    </string-array>

    <!-- DETALHE -->
    <string-array name="pergunta5">
        <item>Gostaria de inseir algum outro termo na pesquisa?</item>
        <item>Deseja incluir algum outro detalhe na pesquisa?</item>
        <item>Se desejar, insira um termo adicional...</item>
    </string-array>

    <string-array name="respostas_numericas">
        <item>...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>+18</item>
    </string-array>

    <string-array name="respostas_categorias">
        <item>Selecione uma Categoria...</item>
        <item>Alcoólico</item>
        <item>Cartas</item>
        <item>Educativo</item>
        <item>Esportes</item>
        <item>Estratégia</item>
        <item>Lógica</item>
        <item>Música</item>
        <item>Palavras</item>
        <item>RPG</item>
        <item>Tabuleiro</item>
        <item>Outros</item>
    </string-array>

    <string-array name="respostas_materiais">
        <item>Selecione um Material...</item>
        <item>Baralho</item>
        <item>Bola</item>
        <item>Bolinha de Ping-Pong</item>
        <item>Copos</item>
        <item>Dados</item>
        <item>Papel e Caneta</item>
        <item>Tabuleiro</item>
        <item>Venda</item>
    </string-array>
    <string name="title_activity_game_details">GameDetails</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
