<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="25dp"
        tools:layout_editor_absoluteY="25dp">

        <TextView
            android:id="@+id/bemVindoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:text="@string/bem_vindo_default"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/txtPergunta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_top_perg"
            android:text="@string/perg_default_1"
            android:textAlignment="viewEnd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_elements"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtJogadoresMinId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min" />

            <Spinner
                android:id="@+id/respJogadoresMinId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:entries="@array/respostas_numericas" />

            <TextView
                android:id="@+id/txtJogadoresMaxId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/max" />

            <Spinner
                android:id="@+id/respJogadoresMaxId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:entries="@array/respostas_numericas" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtPergunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_top_perg"
            android:text="@string/perg_default_2"
            android:textAlignment="viewEnd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_elements"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFxEtariaMinId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min" />

            <Spinner
                android:id="@+id/respFxEtariaMinId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:entries="@array/respostas_numericas" />

            <TextView
                android:id="@+id/txtFxEtariaMaxId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/max" />

            <Spinner
                android:id="@+id/respFxEtariaMaxId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:entries="@array/respostas_numericas" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtPergunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_top_perg"
            android:text="@string/perg_default_3"
            android:textAlignment="viewEnd" />

        <Spinner
            android:id="@+id/respCategoriaId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_elements"
            android:entries="@array/respostas_categorias" />

        <TextView
            android:id="@+id/txtPergunta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_top_perg"
            android:text="@string/perg_default_4"
            android:textAlignment="viewEnd" />

        <Spinner
            android:id="@+id/respMateriaisId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_elements"
            android:entries="@array/respostas_materiais" />

        <TextView
            android:id="@+id/txtPergunta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_top_perg"
            android:text="@string/perg_default_5"
            android:textAlignment="viewEnd" />

        <EditText
            android:id="@+id/respDetalheId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_elements"
            android:layout_marginTop="@dimen/margin_elements"
            android:ems="10"
            android:hint="@string/label_detalhe"
            android:inputType="text"
            android:label="@string/label_detalhe"
            android:labelFor="@id/txtPergunta5"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBuscarId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_elements"
                android:layout_marginTop="@dimen/margin_elements"
                android:text="@string/botao_busca" />

            <TextView
                android:id="@+id/txtResultadoId"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginTop="@dimen/margin_elements"
                android:text="@string/nenhum_resultado"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>